--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
     transform: translate(-50%, -50%);
     color: white;
     font-family:'Courier New', Courier, monospace;
-    text-align: center;
+    text-align: left;
     font-size: clamp(32px, 2.5vw, 144px);
     overflow-wrap: break-word;
     hyphens: auto;
