Added a button to change the text
There's now a new button at the top of the page to change the text that will appear.

--- a/style.css
+++ b/style.css
@@ -21,3 +21,10 @@ body {
     hyphens: auto;
     user-select: none;
 }
+
+#changetxt {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 50px;
+}
